proj1/tests/correct/reassign.py
x = 10
print x
x = "str"
print x

