proj1/tests/error/octal.py
i = 077777777777
print 'str'

